k8s/namespaces/development/apt-mirror/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apt-mirror
  namespace: development
  labels:
    app.kubernetes.io/name: apt-mirror
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: apt-mirror
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
